update opening_hours endpoint and tests
